--- a/templates/admin_edit_user.html
+++ b/templates/admin_edit_user.html
@@ -24,7 +24,7 @@
             <input type="text"
                    name="username"
                    class="form-control"
-                   value="{{ user.username }}"
+                   value="{{ user.username | e }}"
                    required>
         </div>
 
