--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -57,7 +57,7 @@
                 <td>{{ format_date(c.created_at) }}</td>
                 <td style="text-align:right;">
                     <a href="{{ url_for('client_detail', client_id=c.id) }}"
-                       class="btn btn-secondary btn-sm">
+                       class="btn btn-ouvrir btn-sm">
                         Ouvrir
                     </a>
                 </td>
